--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -42,7 +42,13 @@
     <header>
         <nav class="pure-menu pure-menu-horizontal">
             <label class="menu-container">
-                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <div class="menu-head">
+                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <div class="social">
+                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                    </div>
+                </div>
                 <input type="checkbox" />
                 <span class="checkmark"><i>&equiv;</i></span>
                 <ul class="menu">
