--- a/literacy/index.html
+++ b/literacy/index.html
@@ -29,7 +29,13 @@
     <header>
         <nav class="pure-menu pure-menu-horizontal">
             <label class="menu-container">
-                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <div class="menu-head">
+                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <div class="social">
+                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                    </div>
+                </div>
                 <input type="checkbox" />
                 <span class="checkmark"><i>&equiv;</i></span>
                 <ul class="menu">
@@ -68,6 +74,7 @@
 <li><a href="/literacy/basebank">Выбор базового банка</a></li>
 <li><a href="/literacy/cardscalc">Использование и расчёт банковских карт</a></li>
 <li><a href="/literacy/credits">Математика кредитов</a></li>
+<li><a href="/literacy/brokers">Как выбрать брокера</a></li>
 </ol>
 <h2 id="_3">Справочник</h2>
 <ol>
