--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -29,7 +29,13 @@
     <header>
         <nav class="pure-menu pure-menu-horizontal">
             <label class="menu-container">
-                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <div class="menu-head">
+                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <div class="social">
+                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                    </div>
+                </div>
                 <input type="checkbox" />
                 <span class="checkmark"><i>&equiv;</i></span>
                 <ul class="menu">
@@ -116,7 +122,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
-                <a href="/literacy/moneytransfer"> Денежные переводы &gt;&gt; </a>
+                <a href="/literacy/brokers"> Как выбрать брокера &gt;&gt; </a>
     </div>
     </div>
 </div>
