--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -29,7 +29,13 @@
     <header>
         <nav class="pure-menu pure-menu-horizontal">
             <label class="menu-container">
-                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <div class="menu-head">
+                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <div class="social">
+                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                    </div>
+                </div>
                 <input type="checkbox" />
                 <span class="checkmark"><i>&equiv;</i></span>
                 <ul class="menu">
@@ -183,7 +189,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
-                <a href="/literacy/credits"> &lt;&lt; Математика кредитов </a>
+                <a href="/literacy/brokers"> &lt;&lt; Как выбрать брокера </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
