--- a/notes/system.html
+++ b/notes/system.html
@@ -29,7 +29,13 @@
     <header>
         <nav class="pure-menu pure-menu-horizontal">
             <label class="menu-container">
-                <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                <div class="menu-head">
+                    <a href="/" class="pure-menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
+                    <div class="social">
+                        <a href="https://t.me/on_fin" class="pure-menu-link"><i class="share">&#xea9b;</i></a>
+                        <a href="/feed.atom.xml" class="pure-menu-link"><i class="share">&#xea9f;</i></a>
+                    </div>
+                </div>
                 <input type="checkbox" />
                 <span class="checkmark"><i>&equiv;</i></span>
                 <ul class="menu">
@@ -235,6 +241,7 @@
                 <a href="/notes/aboutme"> &lt;&lt; Кто я и как дошёл до жизни такой </a>
     </div>
     <div class="pure-u-1-3 center">
+                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
                 <a href="/notes/referrals"> Реферальные ссылки &gt;&gt; </a>
