--- a/literacy/index.html
+++ b/literacy/index.html
@@ -82,6 +82,7 @@
 <li><a href="/literacy/deposits">Размещение средств в банках</a></li>
 <li><a href="/literacy/cards">Банковские карты</a></li>
 <li><a href="/literacy/instruments">Краткий обзор инструментов сбережения. Сколько и во что вкладывать</a></li>
+<li><a href="/literacy/taxes">Брокерский счёт: как рассчитываются и уплачиваются налоги</a></li>
 </ol>
         </div>
         <aside>
