--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -238,6 +238,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/taxes"> Брокерский счёт: как рассчитываются и уплачиваются налоги &gt;&gt; </a>
     </div>
     </div>
 </div>
