--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-11" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Выбор базового банка" />
 <meta property="og:url" content="https://onfin.github.io/literacy/basebank" />
 
@@ -58,7 +58,7 @@
             <h1>Выбор базового банка</h1>
             <div class="meta">
                     <p class="description">В чём роль и важность базового банка? Как его правильно выбирать?</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                        <p> Обновлено: <time>2019-11-09</time> </p>
             </div>
         </header>
 
@@ -68,7 +68,7 @@
 <p>Подводных камней здесь <a href="/literacy/deposits">великое множество</a>, поэтому, если банк устанавливает дополнительные условия по начислению процентов или бесплатности обслуживания, убедитесь, что вы можете их стабильно выполнять не «в принципе», а с учётом сложившейся практики и альтернативных издержек: например, не стоит без расчёта переносить расходы с карт с кэшбэком на доходные — обычно это приводит к большей потере денег, чем неначисленные проценты. <strong>И никогда не ведитесь на ставки в рекламных баннерах. Всегда внимательно читайте условия по вкладу/карте и рассчитывайте свой случай. И всегда следите за изменением условий.</strong></p>
 <p>Не стоит упускать из внимания и неснижаемые остатки. Это «длинные» деньги, и желательно получать на них соответствующие проценты. Например, минимальный остаток на расходно-пополняемом вкладе в банке Открытие составляет 50Кр при ставке 5,5%г на годовом вкладе, а ОФЗ с погашением через год дадут 7,5%г — получаем «стоимость обслуживания» такого расходно-пополняемого вклада 930р/год.</p>
 <p>Так как деньги из оперативного резерва нужно рассылать по разным банкам (и, возможно, пополнять этот резерв из разных банков), все виды <a href="/literacy/moneytransfer">денежных переводов</a> через базовый банк должны быть бесплатны в тех пределах, в которыми вы будете ими пользоваться. Даже при возможности бесплатного пополнения резерва с зарплатной карты другого банка, получение з/п лучше перевести в базовый банк чтобы минимизировать <a href="/literacy/moneytransfer#transit">транзит</a>.</p>
-<p>Разумеется, базовое обслуживание в базовом банке должно быть бесплатным <em>для вас</em>. Необязательно вышеперечисленное будет бесплатным в основных тарифах. Банки обычно предлагают некоторые свои сервисы бесплатно тем, кто получает з/п на карту этого банка или открыл в нём крупный вклад. Платные тарифы (обычно прилагаются к карточкам разной степени премиальности) тоже не надо сбрасывать со счетов: возможно, плюшки по этим тарифам (например, повышенный кэшбэк или туристическая страховка) принесут денег больше, чем стоит его обслживание; но базовое обслуживание в расчёте этой экономии учитывать нельзя — оно должно быть бесплатным безусловно.</p>
+<p>Разумеется, базовое обслуживание в базовом банке должно быть бесплатным <em>для вас</em>. Необязательно вышеперечисленное будет бесплатным в основных тарифах. Банки обычно предлагают некоторые свои сервисы бесплатно тем, кто получает з/п на карту этого банка или открыл в нём крупный вклад. Платные тарифы (обычно прилагаются к карточкам разной степени премиальности) тоже не надо сбрасывать со счетов: возможно, плюшки по этим тарифам (например, повышенный кэшбэк или туристическая страховка) принесут денег больше, чем стоит его обслуживание; но базовое обслуживание в расчёте этой экономии учитывать нельзя — оно должно быть бесплатным безусловно.</p>
 <p>Если базовый банк выполняет лишь функции <em>диспетчера оперативного резерва</em>, то особенных требований к его надёжности нет. Однако если вы выбрали на эту роль сомнительный банк, то разумно найти ещё один, удовлетворяющий требованиям базовости, и размесить часть резервов там.</p>
         </div>
         <aside>
@@ -107,7 +107,9 @@
 
             <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
 
-            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
+            <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2019.
+            </p>
         </div>
     </footer>
 </body>
