--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-14" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Использование и расчёт банковских карт" />
 <meta property="og:url" content="https://onfin.github.io/literacy/cardscalc" />
 
@@ -58,7 +58,7 @@
             <h1>Использование и расчёт банковских карт</h1>
             <div class="meta">
                     <p class="description">Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                        <p> Обновлено: <time>2019-11-09</time> </p>
             </div>
         </header>
 
@@ -87,7 +87,7 @@
 </ul>
 <p>Противопоставить этому можно лишь стратегию жёстких лимитов на покупки, как если бы вы пользовались наличными деньгами. Каждый день оставляйте на карте столько, сколько взяли бы с собой наличных (или переводя с соседнего накопительного счёта, или устанавливая соответствующий лимит расходов по карте — почти все это позволяют). Это защитит ваш бюджет не только от вас самих, но и от мошенников: украсть денег с карты больше, чем на ней есть — весьма затруднительно, а если ещё и операции в интернете разрешать только непосредственно в момент их совершения,
 то украсть деньги с карты можно будет только с ней самой. Главное, в эпоху всеобщего проникновения мобильного интернета, запретить себе перекидывать деньги/перевыставлять лимиты «при надобности» в течение дня: <strong>нет лимита = нет денег</strong>.</p>
-<p>Другой аргумент в пользу карт — сохранение истории доходов и расходов для последующего анализа. Расставание с бумажками может быть осязамо, но сиюминутно: вся масса прошедших через ваши руки денег следов не оставляет. Тогда как в ЛК/МП, в выписке по карте, полученные и потраченные бешенные тысячи отразятся и заставят задуматься. Причём достаточно предметно — по категориям.</p>
+<p>Другой аргумент в пользу карт — сохранение истории доходов и расходов для последующего анализа. Расставание с бумажками может быть осязамо, но сиюминутно: вся масса прошедших через ваши руки денег следов не оставляет. Тогда как в ЛК/МП, в выписке по карте, полученные и потраченные бешеные тысячи отразятся и заставят задуматься. Причём достаточно предметно — по категориям.</p>
 <h2 id="_2">Против налички</h2>
 <p>Я — категорический противник наличного оборота. Это самый скверный вариант с точки зрения личных финансов:</p>
 <ul>
@@ -97,14 +97,14 @@
 <li>Риски порчи, утраты наличности, воровства и грабежа.</li>
 <li>Невозможен автоматизированный учёт доходов и расходов.</li>
 <li>Крупная сумма в заначке начинает жечь карман (даже если есть понимание что она там на что-то нужное).</li>
-<li>Во многих магазинах значительно выоднее (до 20%) покупать товар с интернет-витрины.</li>
+<li>Во многих магазинах значительно выгоднее (до 20%) покупать товар с интернет-витрины.</li>
 <li>Ко всему прочему, банки скоро начнут отказываться как выдавать, так и принимать крупные суммы наличных денег (в Европе так уже́).</li>
 </ul>
 <p>Если вам всё-таки дорого ощущение физического взаимодействия с деньгами, хотя бы ограничте его суммами на ежедневные покупки, а резервы всё-таки оставьте в банке.</p>
 <h2 id="_3">Фундаментальные требования к карточкам</h2>
 <p>Как бы вы ни использовали карточку, даже если только снимать периодически пришедшую з/п, критически важны следующие вещи:</p>
 <ul>
-<li>Удобное бесплатное пополнение в рамках сценариев её использования. Оборот по карточке обычно мелкий и частый, комиссии за её пополненение съедят очень много.</li>
+<li>Удобное бесплатное пополнение в рамках сценариев её использования. Оборот по карточке обычно мелкий и частый, комиссии за её пополнение съедят очень много.</li>
 <li>Возможность настройки лимитов на операции: на покупки, на операции в интернете, на снятие наличных. Или возможность открыть в том же банке накопительный счёт. Как сказано выше, это практически единственная защита бюджета от банка, от себя и от мошенников.</li>
 <li>Начисление процентов на остаток по карте или по накопительному счёту не ниже среднерыночных. Потери на этих процентах неосязаемы, но очень велики (см. ниже).</li>
 <li>Возможность анализа трат в ЛК/МП. Бесценный помощник в борьбе за бережливое отношение к себе.</li>
@@ -284,7 +284,9 @@
 
             <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
 
-            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
+            <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2019.
+            </p>
         </div>
     </footer>
 </body>
