--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-09" />
-        <meta property="og:article:modified_time" content="2019-10-17" />
+        <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Денежные переводы" />
 <meta property="og:url" content="https://onfin.github.io/literacy/moneytransfer" />
 
@@ -58,7 +58,7 @@
             <h1>Денежные переводы</h1>
             <div class="meta">
                     <p class="description">Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании.</p>
-                        <p> Обновлено: <time>2019-10-17</time> </p>
+                        <p> Обновлено: <time>2019-11-09</time> </p>
             </div>
         </header>
 
@@ -111,7 +111,7 @@
 </table>
 <p>При этом название банка и корреспонденский счёт обычно проставляются сами по БИК. Для отправки денег организации нужно указать ещё её ИНН и КПП.</p>
 <p>К назначению платежа нужно относиться внимательно. Переводы ходят через ЦБ и проверяются. Обычная формулировка при переводе кому-то — «частный перевод» (необходимость указания номера договора в назначении — особенность некоторых банков), но если нужно будет подтвердить факт оплаты чего-либо конкретного, выдачу или возврат займа, то именно это в назначении платежа и надо указать. Намёк на предпринимательскую деятельность при переводе между счетами физлиц может повлечь за собой проверку, блокировку (по правилам ЦБ счёт физлица не должен использоваться для предпринимательской деятельности) и претензии налоговой. При переводе себе пишут «перевод собственных средств» или «перевод между собственными счетами», в организацию — всегда конкретную цель, лучше с номером и датой договора.</p>
-<p>Обычный межбанковский перевод достаточно медленный. Сперва банк-отправитель собирает пачку переводов, отдаёт её в ЦБ, тот перечисляет деньги между счетами банков (корренспонденский счёт — это как раз номер счёта банка в ЦБ) и рассылает реестры входящих платежей банкам-получателям, которые уже раскидывают их по счетам своих клиентов. В этом году ЦБ начал обновление своей платёжной системы (<a href="https://www.garant.ru/products/ipo/prime/doc/71878428/">новый грфик</a>) и стал обрабатывать переводы раз в полчаса (вместо пяти раз в день), но у банков остаются свои режимы отправки и зачисления денег. С хорошей степенью надёжности можно рассчитывать, что деньги придут через полдня, если все эти полдня рабочие (утром рабочего дня отправка — вечером зачисление, вечером отправка — утром следующего рабочего дня зачисление).</p>
+<p>Обычный межбанковский перевод достаточно медленный. Сперва банк-отправитель собирает пачку переводов, отдаёт её в ЦБ, тот перечисляет деньги между счетами банков (корренспонденский счёт — это как раз номер счёта банка в ЦБ) и рассылает реестры входящих платежей банкам-получателям, которые уже раскидывают их по счетам своих клиентов. В этом году ЦБ начал обновление своей платёжной системы (<a href="https://www.garant.ru/products/ipo/prime/doc/71878428/">новый график</a>) и стал обрабатывать переводы раз в полчаса (вместо пяти раз в день), но у банков остаются свои режимы отправки и зачисления денег. С хорошей степенью надёжности можно рассчитывать, что деньги придут через полдня, если все эти полдня рабочие (утром рабочего дня отправка — вечером зачисление, вечером отправка — утром следующего рабочего дня зачисление).</p>
 <p>Платёжное поручение железнее любой расписки и любого чека. И потерять его невозможно. Главные его преимущества — практически неизгладимый юридический след и минимальное число посредников (следовательно, максимальная надёжность). Поступившие деньги можно использовать сразу, отозвать отправленный перевод нельзя. Перевод с некорректными реквизитами вернётся отправителю через несколько дней (если не хочется их терять, в некоторых банках есть возможность исправить реквизиты отправленного получения).</p>
 <p>Есть ещё <em>срочные</em> межбанковские переводы, которые банки обязаны отправлять и зачислять мнговенно, но не все банки позволяют отправлять такие, а которые позволяют — берут повышенные комиссии.</p>
 <p>За отправку обычного перевода некоторые банки и вовсе не берут комиссий (Тинькофф, Рокет, Ситибанк, Открытие по некоторым тарифам), а некоторые могут задирать её вплоть до 2% min 200р max 3000р (Росбанк). Ещё банки могут вводить лимиты на размер межбанковских переводов (выше которых банк отказывается выполнять его или начинает взимать повышенную комиссию), но это редкость: система как раз таки предназначена для надёжных переводов крупных сумм (да, Газпром тоже через неё рассчитывается — другой нет). Но крупные и/или частые переводы могут начать проверять вручную — это увеличит время прохождения.</p>
@@ -206,7 +206,9 @@
 
             <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
 
-            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
+            <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2019.
+            </p>
         </div>
     </footer>
 </body>
