--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Бережливость — это не про деньги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/notaboutmoney" />
 
@@ -58,7 +58,7 @@
             <h1>Бережливость — это не про деньги</h1>
             <div class="meta">
                     <p class="description">Какие виды капитала есть у человека и зачем их накапливать. Философия экономии и сбережений. Куда вкладывать сбережения? Необходимость баланса между видами капитала.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                        <p> Обновлено: <time>2019-11-09</time> </p>
             </div>
         </header>
 
@@ -75,7 +75,7 @@
 <p>Дети вас, конечно, поддержат, но не переоценивайте размер этой поддержки, ведь они, не будучи воспитаны в духе бережливости, пойдут по этой же кривой и смогут уделить лишь незначительную долю своей энергии, не снизив существенно привычного уровня жизни (да и то, если вы сумеете не испортить с ними отношения к этим годам).</p>
 </li>
 <li>
-<p>Бережливость — это не о том как накопить много денег. Это о том, как продлить себе безбедную жизнь. Что для этого можно сделать?</p>
+<p>Бережливость — это не о том, как накопить много денег. Это о том, как продлить себе безбедную жизнь. Что для этого можно сделать?</p>
 </li>
 <li>
 <p>Запасённая при себе энергия называется <em>капиталом</em>, и бывает он следующих видов.</p>
@@ -150,7 +150,9 @@
 
             <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
 
-            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
+            <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2019.
+            </p>
         </div>
     </footer>
 </body>
