--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-31" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Формирование резервов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/reserves" />
 
@@ -58,12 +58,12 @@
             <h1>Формирование резервов</h1>
             <div class="meta">
                     <p class="description">Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                        <p> Обновлено: <time>2019-11-09</time> </p>
             </div>
         </header>
 
         <div class="content">
-            <p>Весь разговор о личных финансах — это разговор вокруг правильного формирования и расходования <em>резервов</em>. Они выполняют не только очевидную стабилизатора финансов, но и сбережения, планирования и даже экономии (один из важнейших способов экономить — приобретать нужное не в последний момент крайней необходимости, по имеющимся на этот момент не самым низким ценам и возможно даже в кредит, а в благоприятный момент на зарезервированные деньги).
+            <p>Весь разговор о личных финансах — это разговор вокруг правильного формирования и расходования <em>резервов</em>. Они выполняют не только очевидную роль стабилизатора финансов, но и сбережения, планирования и даже экономии (один из важнейших способов экономить — приобретать нужное не в последний момент крайней необходимости, по имеющимся на этот момент не самым низким ценам и возможно даже в кредит, а в благоприятный момент на зарезервированные деньги).
 Тем смешнее, что руководства к личным финансам обычно говорят лишь о <em>«подушке безопасности»</em> — резерве в размере примерно полугодовых текущих расходов на случай потери работы, чтобы можно было в более-менее комфортной обстановке искать новую. А для всего остально предлагают другие термины и другие методы.</p>
 <p>Я предлагаю пользоваться единым универсальным подходом с точки зрения работы с резервами.</p>
 <h2 id="_1">Резервы предстоящих расходов</h2>
@@ -145,7 +145,9 @@
 
             <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
 
-            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
+            <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2019.
+            </p>
         </div>
     </footer>
 </body>
