--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -85,7 +85,7 @@
 <ol>
 <li>Вы получили купоны или дивиденды в валюте, а брокер с них не удержал налог. Нужно подать декларацию с этими дивидендами, пересчитанными в рубли по курсу ЦБ на день выплаты. Если в брокерском отчёте указано, когда и сколько налога было удержано в иностранном государстве, то на эту сумму (так же пересчитанную в рубли) можно налог уменьшить (отдельное поле в декларации). Если удержано больше 13%, то в России вы налог платить не должны и в декларации такой дивиденд можно не указывать. <a href="https://help.tezis.io/hc/ru/articles/360000086833-%D0%92%D0%B8%D0%B4%D1%8B-%D0%B8%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BC%D0%B5%D0%BD%D1%82%D0%BE%D0%B2-%D0%BF%D0%BE-%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D1%8B%D0%BC-%D0%B2%D1%8B-%D1%81%D0%B0%D0%BC%D0%BE%D1%81%D1%82%D0%BE%D1%8F%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE-%D0%B4%D0%BE%D0%BB%D0%B6%D0%BD%D1%8B-%D1%83%D0%BF%D0%BB%D0%B0%D1%82%D0%B8%D1%82%D1%8C-%D0%BD%D0%B0%D0%BB%D0%BE%D0%B3">Список бумаг на Московской бирже, с которых нужно самостоятельно рассчитывать и уплачивать налог.</a></li>
 <li>Вы работаете с иностранным брокером. Нужно будет самостоятельно рассчитать налоги (по правилам, расписаным ниже) и заполнить налоговую декларацию, приложив к ней отчёт брокера (на русском) и свои расчёты. Interactive Brokers позволяет скачать отчёт на русском, если у вас только на английском отчёт, то можно перевести самостоятельно, нотариального перевода обычно не требуют. Печати не нужны (они даже для российских организаций уже не обязательны).</li>
-<li>Вы получили прибыль от операций на валютном рынке. Нюанс в том, что как её правильно рассчитывать, если вы не банальный спекулянт, не знает вообще никто. Материальной выгодой считается продажа валюты за рубли по более выгодному курсу, чем ЦБ РФ на этот день. Обычно рекомендуют декларировать и уплачивать налог с неё.</li>
+<li>Вы получили прибыль от операций на валютном рынке. Нюанс в том, что как её правильно рассчитывать, если вы не банальный спекулянт, не знает вообще никто. Материальной выгодой считается покупка/продажа валюты за рубли по более выгодному курсу, чем ЦБ РФ на этот день. Обычно рекомендуют декларировать и уплачивать налог с неё.</li>
 <li>Декларацию надо подать до 30 апреля, а рассчитанные налоги заплатить до 15 июля.</li>
 </ol>
 <h2 id="_2">В каких случаях можно подать декларацию, чтобы уменьшить налог</h2>
@@ -93,7 +93,7 @@
 <li>У вас в предыдущие годы был убыток, и вы хотите его зачесть в этом году. Если вы получили убыток по брокерскому счёту по итогам года, сразу запросите у брокера справку об убытках. В следующие 10 лет сможете уменьшать налооблагаемый доход по счёту на размер этого убытка. В декларации есть отдельная страница для записей убытков прошлых лет. К декларации нужно будет приложить справки об убытках.</li>
 <li>Вы работаете с несколькими брокерами, и хотите зачесть (сальдировать) прибыль у одного брокера с убытком у другого. Берёте у «убыточного» справку об убытках, у «прибыльного» — 2-НДФЛ. Переносите доходы и расходы по обоим брокерам в декларацию. Непогашенный убыток можно перенести на следующие годы. Если «убыточный» брокер — иностранный, то вместо справки об убытках у вас будет брокерский отчёт и ваши расчёты. ВНИМАНИЕ! Убытки по ИИС любого типа рассчитываются только в момент его закрытия.</li>
 <li>Вы по какой-то причине не подали брокеру заявление об освобождении от налога прибыли от продажи ценных бумаг, бывших в собственности больше трёх лет. Её можно рассчитать самостоятельно (по правилам ниже + <a href="http://ivo.garant.ru/#/document/10900200/entry/2191112:0">п. 2 ст. 219.1 НК РФ</a>) и вписать в декларацию, приложив подтверждающие документы и расчёт. Но лучше не зевать и проводить этот вычет через брокера. Не работает для ИИС.</li>
-<li>Вы внесли деньги на ИИС и хотите получить за них вычет. Про ИИС подробнее дальше.</li>
+<li>Вы внесли деньги на ИИС и хотите получить за них вычет.</li>
 <li>Декларацию можно подать когда угодно, хоть через несколько лет, но лучше как можно раньше: деньги у нас со временем обесцениваются.</li>
 <li>У налоговой будет 3 месяца на проверку и подтверждение вычетов, потом ещё 1 месяц на возврат переплаты (если она есть).</li>
 </ol>
@@ -119,8 +119,8 @@
 <h3 id="_6">Выплата дивидендов по акциям</h3>
 <ol>
 <li>Дивиденды по акциям облагаются налогом в 13% и, по факту, это не НДФЛ, а налог на дивиденды (который раньше был 9%). <strong>Никакие льготы и вычеты на него не распространяются.</strong></li>
-<li>Налог удерживается при выплате при выплате дивидендов по российским акциям.</li>
-<li>Иностранный эмитент при выплате дивидендов удерживает налог в соответствии с собственным законодательством. Чтобы избежать излишнего и двойного налогообложения, нужно у брокера заполнить специальную форму. Например, американские эмитенты по умолчанию удерживают налог 30%, при заполнении формы W8-BEN в америке будет удержано 10%, а в России нужно будет доплатить 3%. Но не для всех стран это работает.</li>
+<li>По российским акциям 13% удерживается в момент выплаты.</li>
+<li>Иностранный эмитент при выплате дивидендов удерживает налог в соответствии с собственным законодательством, также в момент выплаты. Чтобы избежать излишнего и двойного налогообложения, нужно у брокера заполнить специальную форму. Например, американские эмитенты по умолчанию удерживают налог 30%, при заполнении формы W8-BEN в америке будет удержано 10%, а в России нужно будет доплатить 3%. Но не для всех стран это работает.</li>
 </ol>
 <h2 id="_7">Как удерживаются налоги</h2>
 <h3 id="_8">У российского брокера</h3>
@@ -174,7 +174,9 @@
 
             <p>Может быть, вам показалось, но способов получить гарантированную доходность за счёт каких бы то ни было финансовых инструментов, портфелей или торговых стратегий НЕ СУЩЕСТВУЕТ.</p>
 
-            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.</p>
+            <p>Материалы сайта могут быть использованы на условиях лицензии <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA</a>.
+            <br> &copy; <a href="https://t.me/blksv" rel="author">Андрей Болкисев</a>, 2019.
+            </p>
         </div>
     </footer>
 </body>
