Add iis to index.

--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -171,6 +171,20 @@
     </main>
 
     <footer>
+<div class="pure-g">
+<div class="pagination pure-u-1 pure-u-lg-9-12">
+    <div class="pure-g">
+    <div class="pure-u-1-3 left">
+                <a href="/literacy/taxes"> &lt;&lt; Брокерский счёт: как рассчитываются и уплачиваются налоги </a>
+    </div>
+    <div class="pure-u-1-3 center">
+                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
+    </div>
+    <div class="pure-u-1-3 right">
+    </div>
+    </div>
+</div>
+</div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
