--- a/literacy/index.html
+++ b/literacy/index.html
@@ -83,6 +83,7 @@
 <li><a href="/literacy/cards">Банковские карты</a></li>
 <li><a href="/literacy/instruments">Краткий обзор инструментов сбережения. Сколько и во что вкладывать</a></li>
 <li><a href="/literacy/taxes">Брокерский счёт: как рассчитываются и уплачиваются налоги</a></li>
+<li><a href="/literacy/iis">Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</a></li>
 </ol>
         </div>
         <aside>
