--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -164,6 +164,7 @@
                 <a href="/literacy"> &uarr; Грамотность &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/literacy/iis"> Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов &gt;&gt; </a>
     </div>
     </div>
 </div>
