--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -8,11 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
+        <meta name="description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
+        <meta name="keywords" content="финансовая грамотность, налоги, налоговые льготы, налоговые вычеты, фондовый рынок, индивидуальный инвестиционный счёт, ИИС, НДФЛ" />
 
 <meta property="og:locale" content="ru" />
 
+    <meta property="og:description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
 
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="article" />
+        <meta property="og:article:published_time" content="2019-11-10" />
+        <meta property="og:article:modified_time" content="2019-11-11" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -52,6 +57,7 @@
         <header>
             <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
             <div class="meta">
+                    <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
             </div>
         </header>
 
@@ -158,7 +164,7 @@
         </div>
         <aside>
                 <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/iis&title=Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов&description=None" target="_blank"><i class="share">&#xea9d;</i></a>
+        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/iis&title=Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов&description=Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea93;</i></a>
