--- a/notes/index.html
+++ b/notes/index.html
@@ -74,6 +74,7 @@
 <li><a href="/notes/system">Как организованы мои финансы</a></li>
 <li><a href="/notes/referrals">Реферальные ссылки</a></li>
 <li><a href="/notes/accounting">Как и зачем я веду учёт личных финансов</a></li>
+<li><a href="/notes/myportfolio">Мой портфель ценных бумаг и стратегия использования брокерских счетов</a></li>
 </ol>
         </div>
         <aside>
