--- a/notes/accounting.html
+++ b/notes/accounting.html
@@ -125,6 +125,7 @@
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
     </div>
     <div class="pure-u-1-3 right">
+                <a href="/notes/myportfolio"> Мой портфель ценных бумаг и стратегия использования брокерских счетов &gt;&gt; </a>
     </div>
     </div>
 </div>
