--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -17,7 +17,7 @@
 
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-02-24" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2019-11-17" />
 <meta property="og:title" content="Краткий обзор инструментов сбережения. Сколько и во что вкладывать" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments" />
 
@@ -58,7 +58,7 @@
             <h1>Краткий обзор инструментов сбережения. Сколько и во что вкладывать</h1>
             <div class="meta">
                     <p class="description">Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                        <p> Обновлено: <time>2019-11-17</time> </p>
             </div>
         </header>
 
@@ -142,6 +142,8 @@
 Видно, что доходность, в отличие от депозитов, обычно опережает инфляцию, а также видны две крупных реализации общерыночного риска в 2008 и 2014 годах с последующим медленным восстановлением к норме.</p>
 <p>Согласно <a href="https://en.wikipedia.org/wiki/International_Fisher_effect">гипотезе Фишера</a> в долгосрочном периоде изменение обменных курсов объясняется разницей в накопленной инфляции в каждой из валют. Наши девальвации и 2008-го,и 2014-го годов — просто скачкообразное воостановление этого соотношения, и актив, доходность которого опережает инфляцию, от такого рода девальваций (в долгосрочной перспективе) защищён.</p>
 <p>Существуют также облигации с защитой от риска ставок (<em>облигации с переменным купоном</em>, у которых процентная ставка по следующему купону берётся среднерыночной за предыдущий купонный период + некоторый % сверху) и от риска инфляции (<em>облигации с индексируемым номиналом</em>, у которых купон — фиксированный процент от номинала, но сам номинал увеличивается на размер инфляции).</p>
+<div id="gold"></div>
+
 <h2 id="_7">Золото</h2>
 <p><em>Реальный актив</em>, т.е. не обесценивающийся инфляцией. Риски понятны: <em>риск контрагента</em> в случае владения «бумажным золотом» (сюда относятся металлические счета в банках и на бирже, биржевые и паевые фонды на золото), <em>риски кражи и порчи</em> в случае физического металла, и <em>риск ликвидности</em> при необходимости превратить металл в деньги / предметы потребления.</p>
 <p>Золото — <em>товарный актив</em>, цена которого определяется балансом спроса и предложения; кто сберегает в золоте подставляет себя под риски падения спроса и роста предложения. Причём можно сказать, что таковые уже реализовались: реальный спрос на золото давно намного меньше предложения и снижается (<a href="https://www.gold.org/goldhub/data/gold-supply-and-demand-statistics"><em>триста тридцать</em> тонн в год спроса против <em>четырёх с половиной тысяч</em> тонн предложения</a>), а всего золота в обращении находится около 180,000 тонн. Таким образом, его цена практически целиком и полностью определяется спекулятивными настроениями игроков на рынке.</p>
