--- a/notes/index.html
+++ b/notes/index.html
@@ -68,7 +68,11 @@
 <li><a href="/notes/recklessness">Безответственное отношение к деньгам</a></li>
 <li><a href="/notes/finplan">Личный финансовый план — не нужен</a></li>
 </ol>
-<h2 id="_2">Обо мне</h2>
+<h2 id="_2">Фондовый рынок</h2>
+<ol>
+<li><a href="/notes/marketprice">Откуда берётся рыночная цена и доходность акций</a></li>
+</ol>
+<h2 id="_3">Обо мне</h2>
 <ol>
 <li><a href="/notes/aboutme">Кто я и как дошёл до жизни такой</a></li>
 <li><a href="/notes/system">Как организованы мои финансы</a></li>
