--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -92,7 +92,7 @@
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
     <div class="pure-u-1-3 left">
-                <a href="/notes/finplan"> &lt;&lt; Личный финансовый план — не нужен </a>
+                <a href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a>
     </div>
     <div class="pure-u-1-3 center">
                 <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
